--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,12 @@ remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Site Title"
+locale                   : "ko-KR"
+title                    : "One by One"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
-url                      : "https://wahu.github.io"
+name                     : "showpointer"
+description              : "SW study blog"
+url                      : "https://showpointer.github.io"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
